-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b81
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8141887 | emb-9 | Thomas Schatzl | P4 | Resolved | Fixed | team |
In G1ParTask::do_work() G1 merges the thread local age tables with the global one.
However, in later phases G1 continues to evacuate objects into the survivor spaces during java.lang.Reference processing (and CM reference processing).
This means that the age information to determine survivor size is incomplete. Both CMS and Serial GC count them.
However, in later phases G1 continues to evacuate objects into the survivor spaces during java.lang.Reference processing (and CM reference processing).
This means that the age information to determine survivor size is incomplete. Both CMS and Serial GC count them.
- backported by
-
JDK-8141887 G1 merges thread local age tables too early with global age table
-
- Resolved
-
- is blocked by
-
JDK-8040162 Avoid reallocating PLABs between GC phases in G1
-
- Resolved
-
- relates to
-
JDK-8030849 Investigate high fragmentation/waste in some situations during allocation during GC in G1
-
- Open
-