8073146: G1 merges thread local age tables too early with global age table

Move merging of age and survivor table to the end of GC.

Reviewed-by: mgerdin, david